# pptx-slide-translator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_webservice.md  docker-compose.yml  pyproject.toml  test_token_counter.py
alloy/: config.alloy
backend/: logger.py  main.py  requirements.txt  token_counter.py  translator.py
docs/: COST_SUMMARY.md  cost-discrepancy-investigation.md
frontend/: STRUCTURE.md  package.json
frontend/public/: index.html
frontend/public/static/: notice.html.sample
frontend/src/: App.tsx  index.css
frontend/src/components/: index.ts
frontend/src/components/FileInfoDisplay/: index.tsx
frontend/src/components/FileUploadArea/: index.tsx
frontend/src/components/JobStatusDisplay/: index.tsx
frontend/src/components/MonthlyCostCard/: index.tsx
frontend/src/components/NoticeDialog/: index.tsx
frontend/src/hooks/: index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
grafana/provisioning/dashboards/: pptx-translator.json
grafana/provisioning/datasources/: loki.yml
logs/: metrics.jsonl
loki/: config.yml
pptx_slide_translator/: __init__.py  main.py
scripts/: add_current_cumulative.py  cost_summary.py  extract_transactions.py  generate_cumulative_metrics.py  validate_metrics_log.py
