[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pptx-slide-translator"
version = "0.1.0"
description = "PowerPoint翻訳ツール - OpenAI APIを使用してPPTXファイル内のテキストを翻訳します"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["powerpoint", "translation", "openai", "pptx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "langchain>=1.0.3",
    "langchain-openai>=1.0.1",
    "openai>=2.6.1",
    "pydantic>=2.12.3",
    "python-pptx>=1.0.2",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
]

[project.scripts]
pptx-translate = "pptx_slide_translator.main:main"
